Changelog
=========

5.6-dev - (unreleased)
----------------------

5.5 - (2013-06-17)
------------------
* Feature: implemented the eea:objectProvides modifier. This add information
  about provided interfaces to the @@rdf output
  [tiberich #14718]

5.4 - (2013-01-28)
------------------
* Change: Updated and cleaned up broken doctests.
  [demarant refs #13589]   

5.3 - (2013-01-15)
------------------
* Change: do not export children objects when requesting an RDF export 
  of a folderish content. Keep only hasPart statements. 
  This is to avoid redundancy and speed-up rdf export of large folderish content.
  [demarant fixes #13589] 

5.2 - (2012-11-22)
------------------
* Change: registered OWL namespace globally as it is often needed.
  [demarant refs #7409]
* Bug fix: fixed more occurences of UnicodeDecodeError. 
  Do not try to encode already unicode strings.
  [demarant refs #9293]
* Bug fix: Map plone location field to dcterms:spatial for geotag information.
  [demarant refs #3425]
* Bug fix: also register the geo namespace, for pretty printing
  [tiberich refs #3425]
* Refactor: improve the API to make it more clear about the intent of classes
  and interfaces. Now we no longer assume that all exported objects are archetypes,
  we have a more pluggable way to override, per field_type + fieldname +
  context_type the output. Also make the value extracting logic a bit easier to 
  follow by having adapters for each type of value (list, string, datetime,
  etc).
  [tiberich refs #3981]

5.1 - (2012-07-17)
------------------
* Bug fix: only provide rdf view for real archetypes content, FTI and portal
  tools
  [tiberich refs #5301]

5.0 - (2012-07-16)
------------------
* Bug fix: also handle UnicodeDecodeError in when trying to convert text
  using chardet.detect 
  [tiberich refs #5308]

4.9 - (2012-07-13)
------------------
* Bug fix: avoid unicode decode errors in @@rdf 
  [tiberich refs #5308]

4.8 - (2012-06-20)
------------------