@@ -1,0 +1,2 @@
+""" RDF Marshaller settings
+"""
