@@ -1,0 +1,13 @@
+<configure
+  xmlns="http://namespaces.zope.org/zope"
+  xmlns:browser="http://namespaces.zope.org/browser">
+
+  <!-- Control panel -->
+  <browser:page
+    name="rdfmarshaller-settings"
+    for="Products.CMFPlone.interfaces.IPloneSiteRoot"
+    class=".settings.RDFMarshallerSettingsControlPanel"
+    permission="cmf.ManagePortal"
+    />
+
+</configure>
