@@ -1,0 +1,10 @@
+<?xml version="1.0"?>
+<object name="portal_controlpanel" meta_type="Plone Control Panel Tool"
+        i18n:domain="eea" xmlns:i18n="http://xml.zope.org/namespaces/i18n">
+ <configlet title="RDF Marshaller" action_id="rdfmarshaller" appId="eea.rdfmarshaller"
+    category="Products" condition_expr=""
+    url_expr="string:${portal_url}/@@rdfmarshaller-settings" visible="True"
+    i18n:attributes="title">
+  <permission>Manage portal</permission>
+ </configlet>
+</object>
