@@ -1,0 +1,4 @@
+<?xml version="1.0"?>
+<registry>
+    <records interface="eea.rdfmarshaller.controlpanel.interfaces.IRDFMarshallerSettings" />
+</registry>
